<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.identicum.midpoint</groupId>
	<artifactId>rest-users-connector</artifactId>
	<version>0.0.2-SNAPSHOT</version>
	<packaging>jar</packaging>

	<parent>
		<groupId>com.evolveum.polygon</groupId>
		<artifactId>connector-parent</artifactId>
		<version>1.4.2.14</version>
		<relativePath></relativePath>
	</parent>

	<properties>
		<connectorPackage>com.identicum.connectors</connectorPackage>
		<connectorClass>RestUsersConnector</connectorClass>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.evolveum.polygon</groupId>
			<artifactId>connector-rest</artifactId>
			<version>1.4.2.14-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20231013</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.7.1</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.3.1</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.5</version>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>evolveum</id>
			<url>https://nexus.evolveum.com/nexus/content/groups/public/</url>
		</repository>
		<repository>
			<id>evolveum-snapshots</id>
			<url>https://nexus.evolveum.com/nexus/content/repositories/snapshots/</url>
		</repository>
	</repositories>
</project>